Added another controller for multiple controller with different landing pages. Signed-off-by: Pratik Mehta <38359485+pratikm121@users.noreply.github.com>

--- a/SpringMVCPortletTest/src/main/resources/content/Language.properties
+++ b/SpringMVCPortletTest/src/main/resources/content/Language.properties
@@ -1,5 +1,5 @@
-javax.portlet.display-name.springmvcporlet=SpringMVCPorlet
-javax.portlet.keywords.springmvcporlet=SpringMVCPorlet
-javax.portlet.short-title.springmvcporlet=SpringMVCPorlet
-javax.portlet.title.springmvcporlet=SpringMVCPorlet
-springmvcporlet.caption=Hello from SpringMVCPorlet!
+javax.portlet.display-name.springmvccontroller=SpringMVCController
+javax.portlet.keywords.springmvccontroller=SpringMVCController
+javax.portlet.short-title.springmvccontroller=SpringMVCController
+javax.portlet.title.springmvccontroller=SpringMVCController
+springmvccontroller.caption=Hello from SpringMVCController!
